# ChangeLog for x11-drivers/nvidia-drivers
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-drivers/nvidia-drivers/ChangeLog,v 1.208 2009/12/16 22:46:33 peper Exp $

*nvidia-drivers-190.53 (16 Dec 2009)

  16 Dec 2009; Piotr Jaroszyński <peper@gentoo.org>
  +nvidia-drivers-190.53.ebuild:
  Add 190.53.

  28 Nov 2009; Doug Goldstein <cardoe@gentoo.org>
  nvidia-drivers-185.18.36.ebuild, nvidia-drivers-185.18.36-r1.ebuild:
  remove defunct compat_device_check. bug #294896 and bug #294623

  21 Nov 2009; Doug Goldstein <cardoe@gentoo.org>
  nvidia-drivers-185.18.36.ebuild:
  stabilize for bug #290555

  21 Nov 2009; Doug Goldstein <cardoe@gentoo.org>
  nvidia-drivers-71.86.11.ebuild:
  stabilize for bug #290561

*nvidia-drivers-96.43.14 (13 Nov 2009)

  13 Nov 2009; Doug Goldstein <cardoe@gentoo.org>
  +nvidia-drivers-96.43.14.ebuild:
  version bump for xorg-server 1.7 support. ebuild uses the refactored
  ebuild as a base

*nvidia-drivers-173.14.22 (13 Nov 2009)

  13 Nov 2009; Doug Goldstein <cardoe@gentoo.org>
  +nvidia-drivers-173.14.22.ebuild:
  version bump for xorg-server 1.7 support. ebuild uses the refactored
  ebuild as a base

  12 Nov 2009; Doug Goldstein <cardoe@gentoo.org>
  nvidia-drivers-190.42-r3.ebuild:
  fix bash syntax error

*nvidia-drivers-190.29 (09 Nov 2009)

  09 Nov 2009; Doug Goldstein <cardoe@gentoo.org>
  +nvidia-drivers-190.29.ebuild:
  add 190.29 series for OpenCL support

  06 Nov 2009; Doug Goldstein <cardoe@gentoo.org>
  nvidia-drivers-190.42-r3.ebuild:
  oops. fix issue where we might remove vdpau and cuda files

  06 Nov 2009; Doug Goldstein <cardoe@gentoo.org>
  nvidia-drivers-190.42-r3.ebuild:
  more FreeBSD fixes

*nvidia-drivers-190.42-r3 (06 Nov 2009)

  06 Nov 2009; Doug Goldstein <cardoe@gentoo.org>
  +nvidia-drivers-190.42-r3.ebuild:
  remove generation of libGL.la since eselect-opengl-1.0.9 and newer no