@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX 09nvidia 61 RMD160 b69c3282ba6195112e312fe34bdcb12544aef8ca SHA1 05dd043f66f53409dfe511636d92a339edb4c765 SHA256 14702d6726cc9f0ad832a3cc90059999eb956f9e3a35397cb63cfa6347b33e39
 AUX NVIDIA_glx-defines.patch 437 RMD160 7cc38de0663c51d9e3718f02035a940a5d31e53c SHA1 eef9bcae32d4e00133b205e27ce766488d5c6cdb SHA256 0007f3d962edb87da4788ce58869679c1b10f28223a6bf1c23696fede57305da
 AUX NVIDIA_glx-glheader.patch 380 RMD160 ee9a10cfbed10d5711f58a80553ffebeea5853bf SHA1 72abfedb9dfb7dae7dc23a5701d3e00282fef2c0 SHA256 f630e24067bf6199a64f8fe8c5d6fc158cb4b153bda65ffc3f97b36a9cb08faf
@@ -48,9 +51,16 @@ EBUILD nvidia-drivers-190.29.ebuild 15353 RMD160 e439a3839d956262b0427c2661f9e18
 EBUILD nvidia-drivers-190.42-r2.ebuild 15660 RMD160 7f29ee6ab980b505fa6f905b103db319caa3ce66 SHA1 341ba0641a909ec9b277472f1a7d527f591cc9ba SHA256 6de69f744ffd6baa4f2ac2fe129e6a044b5eb828547a06a51d4f412a2d9172d3
 EBUILD nvidia-drivers-190.42-r3.ebuild 15285 RMD160 8bd81349e282ac3817ddff6317837f3c4769f68f SHA1 422dc75e017fd8b4170cc47145a1df42a1b2bacc SHA256 7bdea0476abe637c0e5b575086ca1db9397550f1997b19556b5d1110b5daa976
 EBUILD nvidia-drivers-190.53.ebuild 15281 RMD160 60df5712fc9b893169a3ef9cb28c23da902422fe SHA1 1b635cf9932f71b11f31a9b392671fe24980780c SHA256 c36bcc73ae8afc65d81502e952d6727bea59bf99624759c3d4482d26fc33cb49
-EBUILD nvidia-drivers-71.86.09.ebuild 14141 RMD160 2e5f2187b9ed1e187c911ef14d695cbbb57fbb5b SHA1 4c39f467cc23265efebcf021ae5af8a0e5c4bb84 SHA256 87084b0ce8a5ba967bfa73eeaf7fff2ba6e47eb063a723d7486e8643d80cc07a
-EBUILD nvidia-drivers-71.86.11.ebuild 14141 RMD160 bda4725374580a9c172a1e6eba0dad94062935d5 SHA1 f55816698b0e436deecf44b980f6671ab8333b1e SHA256 0f757ca9fa31eead6463ff69804f034f49d3a02c84ce1e47486830d5ffe60c15
+EBUILD nvidia-drivers-71.86.09.ebuild 14141 RMD160 583315ca9ffbdc50b2ba36c9e7264b003a456826 SHA1 eecfaf59c6daa4993b0b3a818ce9321044351254 SHA256 1ab8e6ad178aad2452d099c50ff48e9864059814728a41a077c166094bf77fa3
+EBUILD nvidia-drivers-71.86.11.ebuild 14141 RMD160 e1ca921a6dc2381be5acf05afa3933129feaaad1 SHA1 f71d5bf4a065ae475d0f4ae48d1b1cac802a1502 SHA256 7eab9ddf9cd45b876d4fd57cd204edbb6080261306a1804220b5ef808b64cd64
 EBUILD nvidia-drivers-96.43.13.ebuild 14468 RMD160 4c0bbeb1f06cb7df7900d2d2d5ac08703345f548 SHA1 375a2babdcd5ace77ac4b436b6591cf9a1a2f66a SHA256 28ad4cf84b0f6e2f9c8b5aa274c90747bfaff6d91a1778e2d6109a3de668e6d3
 EBUILD nvidia-drivers-96.43.14.ebuild 15373 RMD160 6225e691be3638c0fcc768c95ef8c0cbc8a74a0f SHA1 60bb3843f8818c9e14e0c47737a6e4e4eabd8acb SHA256 3322775c94f1006e586a18d92da02b3327acfb3ff6fcd33ff556b6980941c519
-MISC ChangeLog 46882 RMD160 8a2929224e48f360a845f58382e01739a779c8eb SHA1 ab81435f0f289b0d084d51946426d1e4c14a542e SHA256 80a055cb9c4eba81c3e0372ee46df334ec89c03524097a54d9ca50fa9c639f0d
+MISC ChangeLog 47018 RMD160 f8be06a8032d9a5b65d3d93e65bbdf29f81a4300 SHA1 a57128fdc818c070d6c2de25ef7038643f0ce530 SHA256 f6d0cd33e46f0f00e9d1e53478b39ada2ff2a85014d44f4f173312c84c7a0145
 MISC metadata.xml 608 RMD160 69923c951a3b11d3632338cd673430c1335f78cd SHA1 febe635634c122bf9fb5fd83fd486ab5a25282b3 SHA256 6b13dc244ff827b23a6f1de01eef3a7f607917573fb36b7316a1a629c78cc6bd
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.13 (GNU/Linux)
+
+iEYEARECAAYFAksqhcYACgkQoeSe8B0zEfz52QCdG6XAKhf8G4c6B3HKDHhvJHtU
+Z2cAoIR9QZwNfO+YRwCoDPmsOK6q9C1n
+=utxs
+-----END PGP SIGNATURE-----
